chore: fix publish and version packages workflows

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,6 +11,14 @@ jobs:
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
     steps:
+      - name: Check if commit is from workflow
+        id: check-commit
+        run: |
+          if git log -1 --pretty=%B | grep -q '[skip publish]'; then
+            echo "Commit is from workflow, skipping publish."
+            exit 0
+          fi
+
       - uses: actions/create-github-app-token@v1
         id: app-token
         with:
@@ -39,24 +47,31 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - run: |
+      - name: Install dependencies
+        run: |
           if [ -e yarn.lock ]; then
-          yarn install 
+            yarn install
           elif [ -e package-lock.json ]; then
-          npm ci
+            npm ci
           else
-          npm i
+            npm i
           fi
 
       - name: Stash .npmrc changes
         run: git stash push --keep-index --message "Stashing .npmrc changes"
         continue-on-error: true
 
-      - run: npx lerna run build
-      
-      - run: npx lerna publish from-package --yes
+      - name: Build packages
+        run: npx lerna run build
         env:
-          NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Publish packages
+        run: npx lerna publish from-package --yes
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Unstash .npmrc changes
         if: failure()
