--- a/.github/workflows/version-packages.yml
+++ b/.github/workflows/version-packages.yml
@@ -20,7 +20,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           token: ${{ steps.app-token.outputs.token }}
-          ref: ${{ github.head_ref }}
+          ref: main
           persist-credentials: true
 
       - name: Set up Node.js
