--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -27,10 +27,10 @@ jobs:
           git config --global user.email "carlsberg-release-app[bot]@users.noreply.github.com"
           git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
 
-      - name: Set npm registry and authentication
-        run: echo "//npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN }}" > .npmrc
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: "Setup npm" # Add our registry to npm config
+        run: | # Custom action
+          npm set @carlsberggbs:registry=https://npm.pkg.github.com/@carlsberggbs
+          npm set "//npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN }}"
 
       - name: Install dependencies
         run: |
@@ -41,10 +41,6 @@ jobs:
           else
             npm i
           fi
-
-      - name: Stash .npmrc changes
-        run: git stash push --keep-index --message "Stashing .npmrc changes"
-        continue-on-error: true
 
       - name: Build packages
         run: npx lerna run build
@@ -57,7 +53,3 @@ jobs:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Unstash .npmrc changes
-        if: failure()
-        run: git stash pop
