chore: fix publish workflow
Signed-off-by: Tiago Teixeira <ptteitia@carlsberggroup.com>

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: "Setup npm" # Add our registry to npm config
         run: | # Custom action
-          npm set @carlsberggbs:registry=https://npm.pkg.github.com/@carlsberggbs
+          npm set @carlsberggbs:registry=https://npm.pkg.github.com/
           npm set "//npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN }}"
 
       - name: Install dependencies
