--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "carlsberg-malty",
+  "name": "@carlsberggbs/carlsberg-malty",
   "homepage": "https://malty.carlsberggroup.com/",
   "url": "https://malty.carlsberggroup.com",
   "private": true,
@@ -57,7 +57,7 @@
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.1",
     "react-datepicker": "^4.8.0",
-    "react-dom": "^17.0.2",
+    "react-dom": "^18.3.1",
     "react-popper": "^2.3.0"
   },
   "devDependencies": {
@@ -65,7 +65,7 @@
     "@babel/plugin-syntax-flow": "^7.24.6",
     "@babel/preset-env": "^7.24.6",
     "@babel/preset-flow": "^7.24.6",
-    "@babel/preset-react": "^7.24.6",
+    "@babel/preset-react": "^7.24.7",
     "@babel/preset-typescript": "^7.24.6",
     "@carlsberg/eslint-config-carlsberg": "^0.3.0",
     "@carlsberg/prettier-config": "^0.0.1",
@@ -86,7 +86,7 @@
     "@types/react": "^18.0.28",
     "@types/react-beautiful-dnd": "^13.1.3",
     "@types/react-datepicker": "^4.8.0",
-    "@types/react-dom": "^17.0.18",
+    "@types/react-dom": "^18.3.0",
     "@types/react-table": "^7.7.14",
     "@types/react-test-renderer": "^17.0.2",
     "@types/styled-components": "^5.1.26",
@@ -105,7 +105,7 @@
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-functional": "*",
     "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-jest": "^27.2.1",
+    "eslint-plugin-jest": "^28.6.0",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
@@ -119,7 +119,7 @@
     "prettier": "^2.8.4",
     "prettier-plugin-organize-imports": "^3.2.2",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react-dom": "^18.3.1",
     "react-test-renderer": "^17.0.2",
     "storybook": "^7.4.1",
     "styled-components": "^5.3.6",
@@ -127,9 +127,9 @@
     "ts-jest": "^29.0.5",
     "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
-    "typescript": "~4.9.5",
+    "typescript": "~5.4.5",
     "url-loader": "^4.1.1",
-    "uuid": "^9.0.0",
+    "uuid": "^10.0.0",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.11.1"
@@ -140,7 +140,7 @@
     "glob-parent": "^5.1.2",
     "trim": "^0.0.3",
     "trim-newlines": "^3.0.1",
-    "braces": "^2.3.2",
+    "braces": "^3.0.3",
     "json5": "^2.2.2",
     "react": "<18.0.0",
     "react-dom": "<18.0.0",
@@ -149,7 +149,8 @@
     "semver": "^7.5.2",
     "@adobe/css-tools": "4.3.2",
     "postcss": "8.4.31",
-    "jackspeak": "2.1.1"
+    "jackspeak": "2.1.1",
+    "ws": "^8.17.1"
   },
   "prettier": "@carlsberg/prettier-config",
   "nyc": {
