chore: fix version packages workflow
Signed-off-by: Tiago Teixeira <ptteitia@carlsberggroup.com>

--- a/.github/workflows/version-packages.yml
+++ b/.github/workflows/version-packages.yml
@@ -55,7 +55,7 @@ jobs:
 
       - name: Run Lerna Version
         run: |
-          npx lerna version --conventional-commits --yes --message 'chore(release): bump new versions [skip version]'
+          npx lerna version --conventional-commits --yes --no-private
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
