chore: fix lerna config
Signed-off-by: Tiago Teixeira <ptteitia@carlsberggroup.com>

--- a/lerna.json
+++ b/lerna.json
@@ -17,6 +17,8 @@
       "changelog": false
     },
     "version": {
+      "conventionalCommits": true,
+      "noPrivate": true,
       "tagVersionPrefix": ""
     }
   }
