--- a/.github/workflows/version-packages.yml
+++ b/.github/workflows/version-packages.yml
@@ -22,6 +22,7 @@ jobs:
           token: ${{ steps.app-token.outputs.token }}
           ref: main
           persist-credentials: true
+          fetch-depth: 0
 
       - name: Set up Node.js
         uses: actions/setup-node@v3
