--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,6 +10,7 @@ on:
 jobs:
   tests-run:
     name: 'Run Unit Tests'
+    if: '!contains(github.event.head_commit.message, "[skip ci]")'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
