--- a/.github/workflows/version-packages.yml
+++ b/.github/workflows/version-packages.yml
@@ -6,7 +6,7 @@ on:
     branches: ['main']
 
 jobs:
-  version:
+  bump-versions:
     if: ${{ github.event.pull_request.merged == true }}
     runs-on: ubuntu-latest
 
@@ -56,7 +56,7 @@ jobs:
 
       - name: Run Lerna Version
         run: |
-          npx lerna version --conventional-commits --changelog-preset ./.versionrc.json --yes --no-private
+          npx lerna version --conventional-commits --changelog-preset ./.versionrc.json --yes --no-private --message "chore: bump packages versions [skip ci]"
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
