--- a/.github/workflows/visual-testing.yml
+++ b/.github/workflows/visual-testing.yml
@@ -36,6 +36,9 @@ jobs:
           npm i
           fi
 
+      - name: Build all packages
+        run: npx lerna run build
+
       - name: 'Tar files'
         run: tar -cvf malty.tar .
 
