--- a/.versionrc.json
+++ b/.versionrc.json
@@ -1,4 +1,14 @@
 {
+  "types": [
+    { "type": "feat", "release": "minor" },
+    { "type": "fix", "release": "patch" },
+    { "type": "chore", "release": false },
+    { "type": "docs", "release": false },
+    { "type": "style", "release": false },
+    { "type": "refactor", "release": false },
+    { "type": "perf", "release": false },
+    { "type": "test", "release": false }
+  ],
   "releaseRules": [
     { "breaking": true, "release": "major" },
     { "type": "feat", "release": "minor" },
