--- a/.github/workflows/version-packages.yml
+++ b/.github/workflows/version-packages.yml
@@ -56,7 +56,7 @@ jobs:
 
       - name: Run Lerna Version
         run: |
-          npx lerna version --conventional-commits --changelog-preset ./.versionrc.json --yes --no-private --message "chore: bump packages versions [skip ci]"
+          npx lerna version --conventional-commits --changelog-preset @pragmatics/preset --yes --no-private --message "chore: bump packages versions [skip ci]"
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
