--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "@types/uuid": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^5.54.0",
     "@typescript-eslint/parser": "^5.53.0",
+    "@pragmatics/conventional-changelog-preset": "^1.1.1",
     "babel-jest": "^29.4.1",
     "babel-loader": "^9.1.2",
     "cypress": "13.6.4",
