--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -49,7 +49,7 @@ jobs:
         continue-on-error: true
 
       - name: Publish packages
-        run: npx lerna publish from-package --yes
+        run: npx lerna publish from-package --dist-tag beta --yes
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
