--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -49,7 +49,13 @@ jobs:
         continue-on-error: true
 
       - name: Publish packages
-        run: npx lerna publish from-package --dist-tag beta --yes
+        run: |
+          COMMIT_MSG=$(git log -1 --pretty=%B)
+          if [[ $COMMIT_MSG == *"beta-release"* ]]; then
+            npx lerna publish from-package --dist-tag beta --yes
+          else
+            npx lerna publish from-package --yes
+          fi
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
