chore: fix CODEOWNERS file

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,2 +1,2 @@
-*       @carlsberg/malty-maintainers
-*       @carlsberg/malty-contributors
+-       @CarlsbergGBS/malty-maintainers
+-       @CarlsbergGBS/malty-contributors
