--- a/malty/atoms/Button/package.json
+++ b/malty/atoms/Button/package.json
@@ -7,6 +7,7 @@
   "publishConfig": {
     "access": "public"
   },
+  "private": false,
   "scripts": {
     "build": "yarn build:esm && yarn build:cjs",
     "build:esm": "tsc",
