chore: try publish as public

--- a/lerna.json
+++ b/lerna.json
@@ -12,6 +12,7 @@
   "npmClient": "yarn",
   "command": {
     "publish": {
+      "registry": "https://registry.npmjs.org",
       "conventionalCommits": true,
       "changelog": false
     },
