chore: try publish as public

--- a/malty/atoms/Button/package.json
+++ b/malty/atoms/Button/package.json
@@ -4,6 +4,10 @@
   "main": "./lib/cjs/index.js",
   "module": "./lib/esm/index.js",
   "types": "./lib/esm/index.d.ts",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/carlsberg/malty.git"
+  },
   "publishConfig": {
     "access": "public"
   },
