--- a/lerna.json
+++ b/lerna.json
@@ -12,7 +12,7 @@
   "npmClient": "yarn",
   "command": {
     "publish": {
-      "registry": "https://registry.npmjs.org",
+      "registry": "https://npm.pkg.github.com",
       "conventionalCommits": true,
       "changelog": false
     },
