--- a/lerna.json
+++ b/lerna.json
@@ -12,7 +12,7 @@
   "npmClient": "yarn",
   "command": {
     "publish": {
-      "registry": "https://npm.pkg.github.com",
+      "@carlsberg:registry": "https://npm.pkg.github.com",
       "conventionalCommits": true,
       "changelog": false
     },
