--- a/.github/workflows/version-packages.yml
+++ b/.github/workflows/version-packages.yml
@@ -14,8 +14,8 @@ jobs:
       - uses: actions/create-github-app-token@v1
         id: app-token
         with:
-          app-id: ${{ secrets.CX_RELEASE_APP_ID }}
-          private-key: ${{ secrets.CX_RELEASE_APP_PRIVATE_KEY }}
+          app-id: ${{ secrets.CB_RELEASE_BOT_ID }}
+          private-key: ${{ secrets.CB_RELEASE_BOT_PRIVATE_KEY }}
 
       - uses: actions/checkout@v4
         with:
